files: fixed unicode problems on image preview, and make images center, no-stretch.

--- a/rhodecode/public/css/code-block.less
+++ b/rhodecode/public/css/code-block.less
@@ -500,7 +500,7 @@ div.codeblock {
 
         img.rendered-binary {
             height: auto;
-            width: 100%;
+            width: auto;
         }
 
         .markdown-block {
